--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 
 
 .trip__s1 img{
-    width: 40px;
+    width: 30px;
     height: 40px;
 
 }
@@ -26,21 +26,34 @@ body{
     gap: 40px;
     align-items: center;
     
-  margin-right: 10%;
+  margin-right: 7%;
 
     
 }
+
+
 
 .trip__s2 h5{
 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: bolder;
     font-size: 15px;
+    border: solid black 2px;
+    width: 70px;
+    height: 20px;
+    text-align: center;
+    border-radius: 20px;
+    padding: 10px;
+    border: none;
+    
     
 }
 .trip__s2 h5:hover{
     cursor: pointer;
     border-bottom: solid black 1px;
+    opacity: 0.4;
+    background-color: rgb(235, 218, 218);
+    border: none;
     
     
  
@@ -51,11 +64,20 @@ body{
 .trip__s3{
     display: flex;
    align-items: center;
-  
    
+   width: 150px;
+ 
 }
+.trip__s3 :hover {
+    cursor: pointer;
+    border-bottom: solid black 2px;
+  
+}
+
+
 .trip__s3 h5{
   margin-left: 10px;
+  margin-top: 10px;
 }
 .trip__s3 p{
     margin-left: 10px;
@@ -73,10 +95,6 @@ body{
     
     border-radius: 30px;
 }  
-.trip__s3:hover{
-    cursor: pointer;
-    
-}
 
 
 .Trip__header{
@@ -112,7 +130,7 @@ body{
  display: flex;
  margin-top: 20px;
  align-items: center;
- margin-left: 18%;
+ margin-left: 25%;
  gap: 10px;
  
  
@@ -137,6 +155,10 @@ body{
     border: none;
     font-weight: bolder;
 }
+.trip__container__s3 .two:hover{
+    background-color: rgb(241, 226, 226);
+    opacity: 0.8;
+}
 
 
 .trip__container__s3{
@@ -147,12 +169,21 @@ body{
     width: 700px;
     margin-left: 25%;
     border-radius: 100px;
+    position: sticky;
+    top: 80px;
+   z-index: 1;
+    background-color: white;
+   
+  
+  
     
 }
 .trip__container__s3 input{
    border: none;
     font-size: 15px;
     width: 50%;
+    
+    
    
 
 }
@@ -194,6 +225,8 @@ body{
 }
 
 /*awards*/
+
+
 .trip__container{
     flex-wrap: wrap;
     width: 100%;
@@ -201,6 +234,7 @@ body{
 
 .trip__hotels__s2{
     display: flex;
+    flex-wrap: wrap;
 }
 
 
@@ -219,14 +253,19 @@ body{
    
 }
 .trip__hotels__s2 img{
-    width:250px ;
+    width:280px ;
     height: 250px;
     margin-top: 20px;
      border-radius: 20px;
      padding: 10px;
+     flex-wrap: wrap;
      
     
 
+}
+.trip__hotels__s2 :hover{
+    cursor: pointer;
+    opacity:0.8;
 }
 .trip__hotels__s2 {
     margin-left: 10%;
@@ -237,6 +276,7 @@ body{
 
 .trip__coimbatore{
     margin-left: 10%;
+    flex-wrap: wrap;
     
    
 }
@@ -271,13 +311,21 @@ body{
 
 }
 .trip__coimbatore__s2 img{
-    width:250px ;
+    width:280px ;
     height: 250px;
      border-radius: 20px;
      padding: 10px;
      
     
 }
+
+.trip__coimbatore__s2 img:hover{
+    cursor: pointer;
+    opacity: 0.8;
+
+
+}
+
 .trip__coimbatore__s2 p{
     width: 250px;
     margin-left: 10%;
@@ -298,12 +346,20 @@ body{
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    flex-wrap: wrap;
+    margin-right: 50px;
 }
 .trip__japan__s2 img{
-    width: 250px;
+    width: 280px;
     height: 250px;
     border-radius: 10px;
     margin-left: 60%;
+    
+}
+
+.trip__japan__s2 :hover{
+    cursor: pointer;
+    opacity: 0.8;
 }
 .trip__japan__s2 p{
     width: 250px;  
@@ -343,11 +399,11 @@ body{
 .trip__footer{
     background-color: rgb(224, 242, 250);
     width: 100%;
-    height: 400px;
+    height: 460px;
     
     display: flex;
     margin-top: 40px;
-    justify-content: space-evenly;
+    justify-content: space-around;
     padding-top: 20px;
    
     flex-wrap: wrap;
@@ -374,6 +430,8 @@ body{
 
 .trip__footer__s5 {
     text-align: start;
+    display: flex;
+    flex-wrap: wrap;
     
 }
 .trip__footer2{
@@ -399,9 +457,18 @@ body{
    font-size: 10px;
    border-top: none;
    
-  
-
 }
+
+.trip__footer__s3 .a1{
+   
+    position: absolute;
+ margin-top: 80px;
+ margin-left: 50px;
+ 
+  
+}
+
+
 .trip__footer__s5 .a2{
     border: none;
     border-bottom: solid black 2PX ;
@@ -435,9 +502,7 @@ body{
 .trip__footer__s6 .left:hover{
     cursor: pointer;
 }
-.trip__footer__s3{
-    display: none;
-}
+
 .trip__footer__s4{
     display: none;
    
@@ -458,20 +523,101 @@ body{
 .trip__footer__s5 .left{
     
     margin-top: 10px;
+    
   
 }
-.trip__footer__s5 .z3{
+.trip__footer__s5 .z3,p{
     margin-left: 20px;
     margin-top: 10px;
 }
+.trip__footer__s3 img{
+    width: 30px;
+    height: 40px;
+
+}
+.trip__footer__s3 {
+    display: flex;
+    align-items: center;
+    
+    
+}
+.trip__footer__s3 .left,.right{
+   margin-left: 10px;
+   margin-top: 15px;
+}
+.trip__footer__s3 a{
+    margin-top: 100px;
+  
+   
+}
 
 @media screen and (max-width:800px) {
-    .trip__footer__s6 input {
 
-        color: yellow;
+    .trip__container__s2{
+        font-size: 15px;
     }
     
 }
+@media screen and (max-width:800px) {
+    
+    .trip__container__s3{
+        width: 300px;
+        height: 40px;
+    }
+}
+
+
+@media screen and (max-width:800px) {
+    .trip__container__s2 { 
+        
+   
+        flex-wrap: wrap;
+    }
+    
+}
+
+@media screen and (max-width:800px) {
+    
+    .trip__container__s3 .two{
+       font-size: 15px;
+       margin-left: 15%;
+     
+       
+       
+}
+
+@media screen and (max-width:800px) {
+    .trip__s2{
+        margin-left: 60px;
+    }
+}
+@media screen and (max-width:800px) {
+    .Trip__header{
+        width: 500px;
+       
+    }
+    
+}
+@media screen and (max-width:800px) {
+       
+    .trip__hotels__s2{
+       width: 200px;
+    }
+}
+
+@media screen and (max-width:800) {
+    .trip__japan__s2{
+      
+    }
+}
+@media screen and (max-width:800px) {
+    .trip__footer__s3{
+        width: 400px;
+    }
+    
+}
+   
+   
 
 
 
