--- a/style.css
+++ b/style.css
@@ -1,59 +1,60 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     font-family: "Poppins", sans-serif;
 
-} 
+}
 
 
-.trip__s1 img{
+.trip__s1 img {
     width: 30px;
     height: 40px;
 
 }
-.trip__s1{
+
+.trip__s1 {
     display: flex;
-    gap: 3px; 
+    gap: 3px;
     animation-name: zoom;
-    animation-duration: 5s;  
+    animation-duration: 5s;
     opacity: 0;
     animation-fill-mode: forwards
-    
 }
-@keyframes zoom{
-    0%{
+
+@keyframes zoom {
+    0% {
         transform: scale(0);
         opacity: 0;
     }
-    100%{
+
+    100% {
         transform: scale(1);
         opacity: 1;
     }
-    
+
 
 }
 
 
-
-
-.trip__s1  :hover{
+.trip__s1 :hover {
     cursor: pointer;
 }
-.trip__s2{
+
+
+.trip__s2 {
     display: flex;
     gap: 40px;
     align-items: center;
-    
-  margin-right: 7%;
 
-    
+    margin-right: 7%;
 }
 
 
 
-.trip__s2 h5{
+.trip__s2 h5 {
 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: bolder;
@@ -65,174 +66,154 @@ body{
     border-radius: 20px;
     padding: 10px;
     border: none;
-    
-    
 }
-.trip__s2 h5:hover{
+
+
+.trip__s2 h5:hover {
     cursor: pointer;
     border-bottom: solid black 1px;
     opacity: 0.4;
     background-color: rgb(235, 218, 218);
     border: none;
-    
-    
- 
-   
-    
 }
 
-.trip__s3{
+
+.trip__s3 {
     display: flex;
-   align-items: center;
-   
-   width: 150px;
- 
+    align-items: center;
+    width: 150px;
+
 }
+
+
 .trip__s3 :hover {
     cursor: pointer;
     border-bottom: solid black 2px;
-  
+
 }
 
 
-.trip__s3 h5{
-  margin-left: 10px;
-  margin-top: 10px;
+.trip__s3 h5 {
+    margin-left: 10px;
+    margin-top: 10px;
 }
-.trip__s3 p{
+
+.trip__s3 p {
     margin-left: 10px;
 }
+
 .trip__s3__a4 {
     display: flex;
-    
+
 }
 
-
-.trip__s3 img{
+.trip__s3 img {
     width: 40px;
     height: 40px;
     margin-left: 10%;
-    
+
     border-radius: 30px;
-}  
+}
 
 
-.Trip__header{
+.Trip__header {
     display: flex;
     justify-content: space-around;
-   padding: 20px;
-   position: sticky;
-   top: 0;
-   z-index: 1;
-   background-color: white;
-   color: black;
-
-   flex-wrap: wrap;
-  
-   
-}
-.trip__container{
-   flex-wrap: wrap;
-    
+    padding: 20px;
+    position: sticky;
+    z-index: 1;
+    background-color: white;
+    color: black;
+    flex-wrap: wrap;
 }
 
-.trip__container__s1{
+.trip__container {
+    flex-wrap: wrap;
+
+}
+
+.trip__container__s1 {
     font-size: 25px;
     text-align: center;
-   
-    
-   
 }
-
-
 
 .trip__container__s2 {
- display: flex;
- margin-top: 20px;
- align-items: center;
- margin-left: 25%;
- gap: 10px;
- position: relative;
- 
- 
- 
- 
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    margin-left: 25%;
+    gap: 10px;
+    position: relative;
+
 }
 
-.trip__container__s2 .one{
-    
-    border-bottom: solid black 2px;   
+.trip__container__s2 .one {
+
+    border-bottom: solid black 2px;
 }
 
-.trip__container__s2 p:hover{
+.trip__container__s2 p:hover {
     cursor: pointer;
-    
 }
 
-
-
-
-.trip__container__s3 .two{
+.trip__container__s3 .two {
     width: 80px;
     height: 40px;
     border-radius: 20px;
     margin-left: 35%;
-    background-color:  #84E9BD;
+    background-color: #84E9BD;
     font-size: 15px;
     border: none;
     font-weight: bolder;
 }
-.trip__container__s3 .two:hover{
+
+.trip__container__s3 .two:hover {
     background-color: rgb(241, 226, 226);
     opacity: 0.8;
 }
 
 
-.trip__container__s3{
-    border: solid skyblue 0.1px ;
+.trip__container__s3 {
+    border: solid skyblue 0.1px;
     margin-top: 70px;
-    
+
     padding: 10px;
     width: 700px;
     margin-left: 25%;
     border-radius: 100px;
-   
-    
-  
-    
 }
 
 
-.trip__container__s3 input{
-   border: none;
+.trip__container__s3 input {
+    border: none;
     font-size: 15px;
     width: 50%;
-    
-    
-   
-
 }
-.trip__container__s3 input:focus{
+
+
+.trip__container__s3 input:focus {
     outline: none;
 }
-.trip__container__s4 input{
+
+.trip__container__s4 input {
     width: 60%;
     height: 300px;
     margin-top: 5%;
     margin-left: 10%;
     background-color: skyblue;
     border: none;
-    border-radius: 10px;  
+    border-radius: 10px;
 }
-.trip__container__s3 i:hover{
-    cursor: pointer;
-}
-.trip__container__s3 button:hover{
+
+.trip__container__s3 i:hover {
     cursor: pointer;
 }
 
+.trip__container__s3 button:hover {
+    cursor: pointer;
+}
 
-.trip__container__s4 img{
+.trip__container__s4 img {
     width: 80%;
     height: 50%;
     margin-left: 10%;
@@ -240,7 +221,8 @@ body{
     border-radius: 20px;
     position: relative;
 }
-.trip__container__s5 img{
+
+.trip__container__s5 img {
     width: 80%;
     height: 50%;
     margin-left: 10%;
@@ -250,204 +232,199 @@ body{
 }
 
 
-.trip__container{
+.trip__container {
     flex-wrap: wrap;
     width: 100%;
 }
 
-.trip__hotels__s2{
+.trip__hotels__s2 {
     display: flex;
     flex-wrap: wrap;
 }
 
 
 .trip__hotels__s1 h2 {
-    margin-top: 20px;   
+    margin-top: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 10%;
 }
-.trip__hotels__s1 p{
+
+.trip__hotels__s1 p {
     font-weight: lighter;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 10%;
     margin-top: 10px;
     font-weight: lighter;
-    
-   
 }
-.trip__hotels__s2 img{
-    width:280px ;
+
+.trip__hotels__s2 img {
+    width: 280px;
     height: 250px;
     margin-top: 20px;
-     border-radius: 20px;
-     padding: 10px;
-     flex-wrap: wrap;
-     
-    
+    border-radius: 20px;
+    padding: 10px;
+    flex-wrap: wrap;
 
 }
-.trip__hotels__s2 :hover{
+
+.trip__hotels__s2 :hover {
     cursor: pointer;
-    opacity:0.8;
+    opacity: 0.8;
 }
+
 .trip__hotels__s2 {
     margin-left: 10%;
-    
+
 }
 
-
-
-.trip__coimbatore{
+.trip__coimbatore {
     margin-left: 10%;
     flex-wrap: wrap;
-    
-   
+
 }
 
 .trip__coimbatore__s1 h1 {
     margin-top: 20px;
     margin-left: 10%;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    
-}
-.trip__coimbatore__s1 p{
-    font-weight: lighter;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  position: absolute;
-  margin-right: 10%;
-  display: none;
-    
-  
-    
+
 }
 
-   
+.trip__coimbatore__s1 p {
+    font-weight: lighter;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: absolute;
+    margin-right: 10%;
+    display: none;
+}
 
 .trip__coimbatore__s2 {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-   
-   
-   
-    
 
 }
-.trip__coimbatore__s2 img{
-    width:280px ;
+
+
+.trip__coimbatore__s2 img {
+    width: 280px;
     height: 250px;
-     border-radius: 20px;
-     padding: 10px;
-     
-    
+    border-radius: 20px;
+    padding: 10px;
+
+
 }
 
-.trip__coimbatore__s2 img:hover{
+.trip__coimbatore__s2 img:hover {
     cursor: pointer;
     opacity: 0.8;
-
-
 }
 
-.trip__coimbatore__s2 p{
+.trip__coimbatore__s2 p {
     width: 250px;
     margin-left: 10%;
     margin-top: 10px;
-   
+
 }
-.trip__japan__s1{
-    margin-left: 150px;
+
+.trip__japan__s1 {
+    margin-left: 100px;
     margin-top: 20px;
 }
-.trip__japan__s1 p{
+
+.trip__japan__s1 p {
     display: none;
 }
-   
 
-
-.trip__japan__s2{
+.trip__japan__s2 {
     display: flex;
     gap: 20px;
     margin-top: 20px;
     flex-wrap: wrap;
     margin-right: 50px;
 }
-.trip__japan__s2 img{
+
+.trip__japan__s2 img {
     width: 280px;
     height: 250px;
     border-radius: 10px;
-    margin-left: 60% ;
-    
+    margin-left: 60%;
+
 }
 
-.trip__japan__s2 :hover{
+.trip__japan__s2 :hover {
     cursor: pointer;
     opacity: 0.8;
 }
-.trip__japan__s2 p{
-    width: 250px;  
+
+.trip__japan__s2 p {
+    width: 250px;
     margin-left: 60%;
-   
 
 }
-.trip__next img{
+
+.trip__next img {
     width: 100%;
     height: 400px;
-     
+
 }
+
 .trip__next {
     margin-top: 20px;
     display: flex;
     position: relative;
-    
+
 }
-.trip__next .three{
+
+.trip__next .three {
     width: 60px;
     height: 25px;
     padding: 5px;
-   border-radius: 10px;
-   background: red;
-   color: white;
-   font-weight: bolder;
-   position: absolute;
-   top: 90%;
-   margin-left: 21%;
-   border: white;
-   text-decoration: none;
-   text-align: center;
-  
-  
+    border-radius: 10px;
+    background: red;
+    color: white;
+    font-weight: bolder;
+    position: absolute;
+    top: 90%;
+    margin-left: 21%;
+    border: white;
+    text-decoration: none;
+    text-align: center;
+
+
 }
 
-.trip__footer{
+.trip__footer {
     background-color: rgb(224, 242, 250);
     width: 100%;
     height: 460px;
-    
     display: flex;
     margin-top: 40px;
     justify-content: space-around;
     padding-top: 20px;
-   
     flex-wrap: wrap;
-    
+
 }
-.trip__footer__s1 p:hover{
+
+.trip__footer__s1 p:hover {
     cursor: pointer;
     color: blueviolet;
 }
-.trip__footer__s2 p:hover{
+
+.trip__footer__s2 p:hover {
     cursor: pointer;
     color: blueviolet;
 }
-.trip__footer__s3 p:hover{
+
+.trip__footer__s3 p:hover {
     cursor: pointer;
     color: blueviolet;
 }
-.trip__footer__s4 p:hover{
+
+.trip__footer__s4 p:hover {
     cursor: pointer;
     color: blueviolet;
-    
+
 }
 
 
@@ -455,138 +432,153 @@ body{
     text-align: start;
     display: flex;
     flex-wrap: wrap;
-    
+
 }
-.trip__footer2{
-    background-color: rgb(224, 242, 250) ;
+
+.trip__footer2 {
+    background-color: rgb(224, 242, 250);
     width: 100%;
     height: 200px;
     display: flex;
-    margin-top: 0px;
+
     padding: 10px;
-    
     flex-wrap: wrap;
-    
-   
 }
-.trip__footer2 img,p{
+
+.trip__footer2 img,
+p {
     margin-bottom: 0%;
     margin-left: 50px;
-   
- 
+
 }
+
 .trip__footer__s5 .a1 {
     margin-left: 50px;
-   font-size: 10px;
-   border-top: none;
-   
+    font-size: 10px;
+    border-top: none;
+
 }
 
-.trip__footer__s3 .a1{
-   
- position: absolute;
- margin-top: 80px;
- margin-left: 50px;
-  
+.trip__footer__s3 .a1 {
+
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 50px;
+
 }
 
-.trip__footer__s3 .a1 :hover{
+
+.trip__footer__s3 .a1 :hover {
     border: none;
     cursor: pointer;
-   
+
 }
 
 
-.trip__footer__s5 .a2{
+.trip__footer__s5 .a2 {
     border: none;
-    border-bottom: solid black 2PX ;
-   
+    border-bottom: solid black 2PX;
+
 
 }
-.trip__footer__s5 .a2:hover{
+
+.trip__footer__s5 .a2:hover {
     cursor: pointer;
     color: blueviolet;
 }
 
 
-.trip__footer__s5 img{
+.trip__footer__s5 img {
     width: 40px;
     height: 40px;
 
 }
 
-.trip__footer__s6,.trip__footer__s7{
+.trip__footer__s6,
+.trip__footer__s7 {
     margin-left: 50%;
 }
 
-.trip__footer__s6,.trip__footer__s7:hover{
+.trip__footer__s6,
+.trip__footer__s7:hover {
     cursor: pointer;
     color: gray;
-    
+
 }
-.trip__footer__s6 .right:hover{
-    cursor: pointer;
-}
-.trip__footer__s6 .left:hover{
+
+.trip__footer__s6 .right:hover {
     cursor: pointer;
 }
 
-.trip__footer__s4{
+.trip__footer__s6 .left:hover {
+    cursor: pointer;
+}
+
+.trip__footer__s4 {
     display: none;
-   
+
 }
 
-.trip__footer2{
+.trip__footer2 {
     flex-wrap: wrap;
 }
-.trip__footer__s5 .z1{
+
+.trip__footer__s5 .z1 {
     margin-right: 20PX;
     margin-top: 10PX;
-    
+
 }
-.trip__footer__s5 .right{
-  
-   margin-top: 10px;
-}
-.trip__footer__s5 .left{
-    
+
+.trip__footer__s5 .right {
+
     margin-top: 10px;
-    
-  
 }
-.trip__footer__s5 .z3,p{
+
+.trip__footer__s5 .left {
+
+    margin-top: 10px;
+
+
+}
+
+.trip__footer__s5 .z3,
+p {
     margin-left: 20px;
     margin-top: 10px;
 }
-.trip__footer__s3 img{
+
+.trip__footer__s3 img {
     width: 30px;
     height: 40px;
 
 }
+
 .trip__footer__s3 {
     display: flex;
     align-items: center;
-    
-    
+
+
 }
-.trip__footer__s3 .left,.right{
-   margin-left: 20px;
-   margin-top: 50px;
+
+.trip__footer__s3 .left,
+.right {
+    margin-left: 20px;
+    margin-top: 50px;
 }
-.trip__footer__s3 a{
+
+.trip__footer__s3 a {
     margin-top: 90px;
 
-  
-   
+
+
 }
 
-.trip__footer__s3 .z3{
-  padding: 10px;
-  margin-left: 5px   
- 
+.trip__footer__s3 .z3 {
+    padding: 10px;
+    margin-left: 5px
 }
 
-.trip__footer__s3 .z3:hover{
+.trip__footer__s3 .z3:hover {
     cursor: pointer;
     border: solid black 2px;
     width: fit-content;
@@ -595,233 +587,224 @@ body{
     border-radius: 20px;
     border: none;
 }
-   
-.pop{
+
+.pop {
     position: relative;
     cursor: pointer;
-   
-}
-.pop1{
-    position: absolute;
-  
-    width: 500PX;
-    font-size: 30PX;
-    padding: 10px;
-    font-weight: bold;
-    display: none; 
-    
-}
-.pop:hover .pop1{
-  display: block;
 
-  
 }
-.pop2{
+
+.pop1 {
     position: absolute;
-  
+
     width: 500PX;
     font-size: 30PX;
     padding: 10px;
     font-weight: bold;
-    display: none;    
+    display: none;
+
 }
-.pop:hover .pop2{
+
+.pop:hover .pop1 {
+    display: block;
+
+
+}
+
+.pop2 {
+    position: absolute;
+
+    width: 500PX;
+    font-size: 30PX;
+    padding: 10px;
+    font-weight: bold;
+    display: none;
+}
+
+.pop:hover .pop2 {
     display: block;
 
 }
-.pop3{
+
+.pop3 {
     position: absolute;
-  
+
     width: 500PX;
     font-size: 30PX;
     padding: 10px;
     font-weight: bold;
-    display: none;    
+    display: none;
 }
-.pop:hover .pop3{
+
+.pop:hover .pop3 {
     display: block;
 
 }
-.pop4{
+
+.pop4 {
     position: absolute;
-  
+
     width: 500PX;
     font-size: 30PX;
     padding: 10px;
     font-weight: bold;
-    display: none;    
+    display: none;
 }
-.pop:hover .pop4{
+
+.pop:hover .pop4 {
     display: block;
 
 }
-   
-   
-    
+
+
+
 
 @media screen and (max-width:800px) {
 
-    .trip__japan__s2{
-       align-items: center;
+    .trip__japan__s2 {
+        align-items: center;
     }
-    
+
 }
 
 
-   
+
 
 
 @media screen and (max-width:800px) {
 
-    .trip__container__s2{
+    .trip__container__s2 {
         font-size: 15px;
     }
-    
+
 }
+
 @media screen and (max-width:800px) {
-    
-    .trip__container__s3{
+
+    .trip__container__s3 {
         width: 300px;
         height: 40px;
-       
+
     }
 }
 
 
-    
-
-
-
 @media screen and (max-width:800px) {
 
-    .trip__footer__s3 .z3{
+    .trip__footer__s3 .z3 {
         padding: 20px;
-     
-        
-     
+
     }
-    
+
 }
 
 @media screen and (max-width:800px) {
 
-    .trip__container__s1{
+    .trip__container__s1 {
         margin-left: 20PX;
     }
 }
 
 
 @media screen and (max-width:800px) {
-    .trip__container__s2 { 
-        
+    .trip__container__s2 {
+
         flex-wrap: wrap;
-  
-        
+
+
     }
-    
+
 }
 
 @media screen and (max-width:800px) {
-    
-    .trip__container__s3 .two{
-       font-size: 15px;
-       margin-left: 15%;
-     
-       
-       
-}
 
-@media screen and (max-width:800px) {
-    .trip__s2{
-        margin-left: 45px;
-    }
-    .trip__s3{
-        margin-left: 45px;
-
-    }
-}
-@media screen and (max-width:800px) {
-    .Trip__header{
-        width: 500px;
-       
-    }
-    
-}
-@media screen and (max-width:800px) {
-       
-    .trip__hotels__s2{
-       width: 200px;
-    }
-}
-
-@media screen and (max-width:800px) {
-    .trip__footer__s3{
-        width: 500px;
-    }
-    
-}
-
-
-@media screen and (max-width:800px) {
-    .pop1{
-       
+    .trip__container__s3 .two {
         font-size: 15px;
-        bottom: 15px;
-        left: 1px;
-        align-items: center;
-       
-       
+        margin-left: 15%;
+
+
+
     }
-    .pop2{
-       margin: auto;
-        font-size: 15px;
-        bottom: 20px;
-     align-items: center;
-       
-       
+
+    @media screen and (max-width:800px) {
+        .trip__s2 {
+            margin-left: 45px;
+        }
+
+        .trip__s3 {
+            margin-left: 45px;
+
+        }
     }
-    .pop3{
-        margin: auto;
-         font-size: 15px;
-         top: 20px;
-      align-items: center;
-        
-        
-     }
 
-     .pop4{
-        margin: auto;
-         font-size: 15px;
-         top: 20px;
-      align-items: center;
-        
-        
-     }
-    
-    
-}
+    @media screen and (max-width:800px) {
+        .Trip__header {
+            width: 500px;
 
-@media screen and (max-width:800px) {
-    .pop4:hover{
-        border-bottom: none;
+        }
+
+    }
+
+    @media screen and (max-width:800px) {
+
+        .trip__hotels__s2 {
+            width: 200px;
+        }
+    }
+
+    @media screen and (max-width:800px) {
+        .trip__footer__s3 {
+            width: 500px;
+        }
+
+    }
+
+
+    @media screen and (max-width:800px) {
+        .pop1 {
+
+            font-size: 15px;
+            bottom: 15px;
+            left: 1px;
+            align-items: center;
+
+
+        }
+
+        .pop2 {
+            margin: auto;
+            font-size: 15px;
+            bottom: 20px;
+            align-items: center;
+
+
+        }
+
+        .pop3 {
+            margin: auto;
+            font-size: 15px;
+            top: 20px;
+            align-items: center;
+
+
+        }
+
+        .pop4 {
+            margin: auto;
+            font-size: 15px;
+            top: 20px;
+            align-items: center;
+
+
+        }
+
+
+    }
+
+    @media screen and (max-width:800px) {
+        .pop4:hover {
+            border-bottom: none;
+        }
+
     }
     
-}
-   
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
